[gd_scene load_steps=29 format=3 uid="uid://ccm2vdp5io3vp"]

[ext_resource type="Texture2D" uid="uid://70yi3w6ahvk" path="res://player/player.png" id="1"]
[ext_resource type="Script" path="res://player/player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bihfp5xakcprk" path="res://player/player-head.png" id="3_kafp1"]
[ext_resource type="Texture2D" uid="uid://by2jcixmb50vq" path="res://player/player-arm.png" id="4_1tot7"]
[ext_resource type="Texture2D" uid="uid://dpfdphjcoenhk" path="res://player/player-body.png" id="4_3jdis"]
[ext_resource type="Texture2D" uid="uid://bpy5dtepd4bv" path="res://player/player-leg.png" id="5_7s5k6"]
[ext_resource type="Texture2D" uid="uid://crolxgkvw4x22" path="res://world/gray-tile.png" id="6_hqpln"]
[ext_resource type="Texture2D" uid="uid://skfke8ilijrm" path="res://menu/info_line1.png" id="7_owit4"]
[ext_resource type="Script" path="res://player/CameraPlayer.gd" id="7_vr35n"]
[ext_resource type="Texture2D" uid="uid://drgwkcl7fx6vv" path="res://menu/info_line2.png" id="8_0nbfo"]
[ext_resource type="FontFile" uid="uid://mijglbcw51mn" path="res://menu/fonts/century_gothic_bold.ttf" id="9_1jm30"]
[ext_resource type="PackedScene" uid="uid://bsy746refa5xe" path="res://pause_menu.tscn" id="10_un68t"]
[ext_resource type="PackedScene" uid="uid://bo3r7g5ooa7lu" path="res://task_menu.tscn" id="11_eacsw"]
[ext_resource type="PackedScene" uid="uid://dcclhvn7j7jts" path="res://menu/text_dialog.tscn" id="11_gjpbn"]
[ext_resource type="StyleBox" uid="uid://dl3jhr4qsj1hk" path="res://menu/fonts/menu_style.tres" id="12_nw4v6"]
[ext_resource type="Texture2D" uid="uid://xtmjc67x3nu6" path="res://menu/pause_icon.png" id="13_vc4xe"]
[ext_resource type="LabelSettings" uid="uid://cg7ecyiuomsvk" path="res://menu/Label_Settings1.tres" id="14_fy3o4"]
[ext_resource type="StyleBox" uid="uid://d3nqr02kffsik" path="res://menu/btn_hover.tres" id="16_6jh02"]
[ext_resource type="Texture2D" uid="uid://dre0bh0w5b3sk" path="res://menu/tasks_icon.png" id="17_24107"]
[ext_resource type="Shader" path="res://player/vignette.gdshader" id="18_n6w21"]
[ext_resource type="Texture2D" uid="uid://cgm7vmm1312tm" path="res://20240505152703.png" id="21_lxtp5"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 0.754717
height = 6.20885

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sucwv"]
shader = ExtResource("18_n6w21")
shader_parameter/color = null
shader_parameter/muliplier = 0.2
shader_parameter/softness = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6sp1"]
content_margin_left = 13.0
content_margin_right = 13.0
bg_color = Color(0.329412, 0.329412, 0.329412, 0.572549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1nyv"]
bg_color = Color(0.164706, 0, 0.803922, 0.419608)

[sub_resource type="LabelSettings" id="LabelSettings_ri3rn"]
font_size = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2af5b"]
content_margin_left = 4.0
bg_color = Color(0.184314, 0.227451, 0.309804, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.196078, 0.266667, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_dmmis"]
line_spacing = -2.0
font = ExtResource("9_1jm30")
font_size = 24
font_color = Color(0.152941, 0.764706, 0.858824, 1)
outline_size = 2
outline_color = Color(0.152941, 0.764706, 0.858824, 1)

[node name="player" type="CharacterBody2D"]
position = Vector2(0.00984287, 0.0590589)
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 5
script = ExtResource("2")

[node name="skeleton" type="Node2D" parent="."]
position = Vector2(0, -4)

[node name="player-leg2" type="Sprite2D" parent="skeleton"]
position = Vector2(2.785, 6.295)
scale = Vector2(0.23, 0.23)
texture = ExtResource("5_7s5k6")

[node name="player-leg1" type="Sprite2D" parent="skeleton"]
position = Vector2(-1.605, 6.3)
scale = Vector2(0.23, 0.23)
texture = ExtResource("5_7s5k6")

[node name="player-body" type="Sprite2D" parent="skeleton"]
position = Vector2(0, 2.645)
scale = Vector2(0.23, 0.23)
texture = ExtResource("4_3jdis")

[node name="player-head" type="Sprite2D" parent="skeleton"]
position = Vector2(1.13687e-13, -3)
scale = Vector2(0.23, 0.23)
texture = ExtResource("3_kafp1")

[node name="player-arm1" type="Sprite2D" parent="skeleton"]
position = Vector2(-4.26, 2.89)
scale = Vector2(0.23, 0.23)
texture = ExtResource("4_1tot7")

[node name="player-arm2" type="Sprite2D" parent="skeleton"]
position = Vector2(4.255, 2.885)
scale = Vector2(0.23, 0.23)
texture = ExtResource("4_1tot7")

[node name="Gray-tile" type="Sprite2D" parent="skeleton/player-arm2"]
visible = false
position = Vector2(7.58696, 4.84783)
scale = Vector2(1.21739, 1.21739)
texture = ExtResource("6_hqpln")

[node name="Player-sprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.24, 0.24)
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -4)
zoom = Vector2(3, 3)
script = ExtResource("7_vr35n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0209482, 2.53)
rotation = 1.5708
scale = Vector2(1.06, 1.06)
shape = SubResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_sucwv")
offset_right = 320.0
offset_bottom = 180.0

[node name="holding_item_info" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(167.02, 104.729)

[node name="item_info" type="Label" parent="CanvasLayer/holding_item_info"]
offset_left = 26.0
offset_top = -3.0
offset_right = 102.0
offset_bottom = 24.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("9_1jm30")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_u6sp1")
text = "kaka"

[node name="info_line1" type="Sprite2D" parent="CanvasLayer/holding_item_info"]
position = Vector2(10.2506, -7.50613)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_owit4")

[node name="info_line2" type="Sprite2D" parent="CanvasLayer/holding_item_info"]
position = Vector2(10.259, -7.50138)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_0nbfo")

[node name="InteractionLabels" type="VBoxContainer" parent="CanvasLayer/holding_item_info"]
offset_left = 26.0
offset_top = 5.0
offset_right = 288.0
offset_bottom = 278.0
scale = Vector2(0.1, 0.1)
theme_override_constants/separation = 2

[node name="interact_f_label" type="Label" parent="CanvasLayer/holding_item_info/InteractionLabels"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_n1nyv")
text = "[F] pane maha"
label_settings = SubResource("LabelSettings_ri3rn")

[node name="interact_g_label" type="Label" parent="CanvasLayer/holding_item_info/InteractionLabels"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_n1nyv")
text = "[G] ava"
label_settings = SubResource("LabelSettings_ri3rn")

[node name="interact_g_label2" type="Label" parent="CanvasLayer/holding_item_info/InteractionLabels"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_n1nyv")
text = "[G] pane kasti"
label_settings = SubResource("LabelSettings_ri3rn")

[node name="text_dialog" parent="CanvasLayer" instance=ExtResource("11_gjpbn")]
visible = false
anchors_preset = 12
anchor_top = 1.0
grow_vertical = 0
size_flags_horizontal = 1

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_top = 18.0
offset_right = 320.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 4

[node name="task_menu" parent="CanvasLayer" instance=ExtResource("11_eacsw")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 1.52588e-05
grow_horizontal = 1
grow_vertical = 1

[node name="Console" type="LineEdit" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -3.0
offset_right = 727.0
offset_bottom = 19.0
scale = Vector2(0.3, 0.3)

[node name="pause_btn" type="Button" parent="CanvasLayer"]
offset_left = 305.0
offset_top = 3.0
offset_right = 345.0
offset_bottom = 42.0
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = ExtResource("12_nw4v6")
theme_override_styles/hover = ExtResource("16_6jh02")
icon = ExtResource("13_vc4xe")
icon_alignment = 1
expand_icon = true

[node name="task_btn" type="Button" parent="CanvasLayer"]
offset_left = 305.0
offset_top = 19.0
offset_right = 346.0
offset_bottom = 64.0
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = ExtResource("12_nw4v6")
theme_override_styles/hover = ExtResource("16_6jh02")
toggle_mode = true
icon = ExtResource("17_24107")
icon_alignment = 1
expand_icon = true

[node name="task_button" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 305.0
offset_top = 19.0
offset_right = 330.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = ExtResource("12_nw4v6")

[node name="Points" type="Label" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 2.0
offset_right = 122.0
offset_bottom = 39.0
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = ExtResource("12_nw4v6")
text = "Punktid: 2"
label_settings = ExtResource("14_fy3o4")

[node name="Points2" type="Label" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 2.5
offset_right = 127.0
offset_bottom = 39.5
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxFlat_2af5b")
text = "               2"
label_settings = SubResource("LabelSettings_dmmis")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("10_un68t")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 4

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -0.118087)
scale = Vector2(2.65498, 1.68604)
color = Color(0.956863, 0.913725, 0.686275, 1)
energy = 0.81
texture = ExtResource("21_lxtp5")

[connection signal="focus_entered" from="CanvasLayer/Console" to="." method="_on_console_focus_entered"]
[connection signal="text_submitted" from="CanvasLayer/Console" to="." method="_on_console_text_submitted"]
[connection signal="pressed" from="CanvasLayer/pause_btn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/task_btn" to="." method="_on_task_btn_pressed"]
